<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    android:padding="10dp">

    <TextView
        android:id="@+id/SocialPopupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_device"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/PopupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/device_default"
        app:layout_constraintEnd_toEndOf="@+id/SocialPopupLabel"
        app:layout_constraintStart_toStartOf="@+id/SocialPopupLabel"
        app:layout_constraintTop_toBottomOf="@+id/SocialPopupLabel" />

    <Button
        android:id="@+id/SocialAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/add_device_popup"
        app:layout_constraintEnd_toEndOf="@+id/SocialPopupLabel"
        app:layout_constraintStart_toStartOf="@+id/SocialPopupLabel"
        app:layout_constraintTop_toBottomOf="@+id/PopupButton" />
</androidx.constraintlayout.widget.ConstraintLayout>